sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: value unary_! is not a member of Int
  while (!c==0) {
         ^